--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 
 * {
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 body {
@@ -18,16 +17,30 @@ main {
 }
 
 .quote-box {
-    background-color: wheat;
-    width: 84vw;
+    background-color:rgb(215, 171, 132, 100);
+    width: 50vw;
+    padding: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    align-self: center;
 }
 
 .quote {
     white-space: pre-line;
+    margin: 0 0 10px 0;
+}
+
+p {
+    margin: 0;
+    font-style: italic;
 }
 
 .album-grid {
-    background-color: rgba(245, 222, 179, 0.295);
+    background-color: rgb(215, 171, 132, 35%);
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
@@ -49,6 +62,10 @@ main {
 }
 
 .album-button :hover {
- opacity: 15%;
+ opacity: 30%;
  background-color: black;
+}
+
+button {
+    background-color:#000;
 }
