--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
+/* Variables */
 :root {
     --Primary:rgb(215, 171, 132, 100);
     --Primary-low-opacity: rgb(215, 171, 132, 35%);
     --Dark: rgb(0, 0, 0);
+    --background: rgb(5 10 15);
 
     --Folklore-font: "IM Fell DW Pica", serif;
+    --Primary-font: "PT Serif", serif;
+
+    --animation-first:fadeIn 1.5s cubic-bezier(0.44, -0.05, 0.61, 1.06);
+    --animation-second:fadeIn 4s cubic-bezier(0.44, -0.05, 0.61, 1.06);
 }
 
+/* animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 * {
     box-sizing: border-box;
@@ -13,7 +28,7 @@
 
 body {
     margin: 0;
-    background-color: maroon;
+    background-color: var(--background);
     background-image:url(Assets/Midnights-background.webp);
     background-size: cover;
 }
@@ -31,21 +46,28 @@ main {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    animation: var(--animation-first);
 }
 
 h1 {
     align-self: center;
+    margin: 0 0 20px 0;
+    font-family: var(--Primary-font);
 }
 
 .quote {
     white-space: pre-line;
     margin: 0 0 10px 0;
+    font-family: var(--Primary-font);
+    font-weight: 400;
+    font-size: 20px;
     font-style: italic;
 }
 
 .song-title {
     margin: 0;
     font-style: italic;
+    font-family: var(--Primary-font);
 }
 
 .album-grid {
@@ -55,13 +77,14 @@ h1 {
     gap: 1rem;
     margin: 100px;
     padding: 50px;
+    animation: var(--animation-second);
 }
 
 .album-cover {
     display: block;
     max-width: 100%;
     height: auto;
-    object-fit: cover; /* Ensure images fit their containers */
+    object-fit: cover; 
 }
 
 .album-button {
@@ -76,23 +99,104 @@ h1 {
 }
 
 .album-name {
+    padding: 0 5px 0 5px;
     position: absolute; /* Position over the image */
     color: white; /* Adjust text color as needed */
-    font-size: 1rem; /* Adjust font size */
+    font-size: 1rem;
+    font-family: var(--Primary-font);
+    font-weight: 400;
     opacity: 0; /* Initially hidden */
     transition: opacity 0.3s ease; /* Smooth fade-in */
     pointer-events: none; /* Prevent interfering with hover state */
 }
 
-button:hover .album-name {
-    opacity: 1;
-}
-
-.album-cover:hover {
- opacity: 30%;
- transition: opacity 0.3s ease;
-}
-
 button {
     background-color: var(--Dark);
+}
+
+footer {
+    background-color: var(--Primary);
+    width: 100vw;
+    text-align: center;
+    padding: 10px;
+}
+
+footer p {
+    margin: 0;
+}
+
+/* Endast hover på screens */
+@media (pointer: fine) {
+    button:hover .album-name {
+        opacity: 1;
+    }
+    
+    .album-cover:hover {
+     opacity: 20%;
+     transition: opacity 0.3s ease;
+    }
+}
+
+/* Mindre skärmar/fönster */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 24px;
+    } 
+
+    .quote {
+        font-size: 18px;
+    } 
+
+    .song-title {
+        font-size: 16px;
+    }
+
+    .quote-box {
+        width: 55vw;
+        padding: 20px;
+        margin: 20px 0;
+    }
+    
+    .album-grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.8rem; /* Slightly smaller gaps */
+        margin: 10px;
+    }
+
+    .album-name {
+        font-size: 16px;
+    }
+}
+
+/* Mobil */
+@media (max-width: 480px) {
+
+    h1 {
+        font-size: 22px;
+    } 
+
+    .quote {
+        font-size: 16px;
+    } 
+
+    .song-title {
+        font-size: 14px;
+    }
+
+    .album-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.5rem; /* Smaller gaps */
+        margin: 10px;
+        padding: 30px;
+    }
+
+    .quote-box {
+        width: 95vw;
+        padding: 20px;
+        margin: 20px 0;
+    }
+
+    footer p {
+        font-size: 14px;
+    }
 }
