--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@
     --Dark: rgb(0, 0, 0);
     --background: rgb(5 10 15);
 
-    --Folklore-font: "IM Fell DW Pica", serif;
     --Primary-font: "PT Serif", serif;
 
     --animation-first:fadeIn 1.5s cubic-bezier(0.44, -0.05, 0.61, 1.06);
     --animation-second:fadeIn 4s cubic-bezier(0.44, -0.05, 0.61, 1.06);
 }
 
-/* animations */
+/* Animation */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -100,14 +99,14 @@ h1 {
 
 .album-name {
     padding: 0 5px 0 5px;
-    position: absolute; /* Position over the image */
-    color: white; /* Adjust text color as needed */
+    position: absolute; 
+    color: white; 
     font-size: 1rem;
     font-family: var(--Primary-font);
     font-weight: 400;
-    opacity: 0; /* Initially hidden */
-    transition: opacity 0.3s ease; /* Smooth fade-in */
-    pointer-events: none; /* Prevent interfering with hover state */
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
+    pointer-events: none;
 }
 
 button {
@@ -159,7 +158,7 @@ footer p {
     
     .album-grid {
         grid-template-columns: repeat(3, 1fr);
-        gap: 0.8rem; /* Slightly smaller gaps */
+        gap: 5px;
         margin: 10px;
     }
 
@@ -185,7 +184,7 @@ footer p {
 
     .album-grid {
         grid-template-columns: repeat(2, 1fr);
-        gap: 0.5rem; /* Smaller gaps */
+        gap: 5px;
         margin: 10px;
         padding: 30px;
     }
